--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  font-family: Helvetica, sans-serif;
+}
+.main{
+  padding: 25px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.encabezado{
+  display: flex;
+  padding: 20px;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+
+.logo{
+  max-width: 200px;
+}
+
+.titulo{
+  font-size: 30px;
+  color: #16547e;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.tutorial{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 15px;
+  align-items: center;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  padding: 15px;
+}
+.campo-tutorial{
+  width: 15%;
+}
+
+@media (max-width:768px){
+  .tutorial{
+    flex-direction: column;
+    justify-content: stretch;
+  }
+  .campo-tutorial{
+    width: 90%;
+  }
+}
+
+
+.btn-activar{
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #1C5C86;
+  border: none;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+}
+.btn-activar:hover{
+  background-color: #66abda;
+}
+
+.btn-borrar{
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #b9271a;
+  border: none;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+}
+.btn-borrar:hover{
+  background-color: #df483b;
+}
+
+.btn-crear{
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #042135;
+  border: none;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+}
+.btn-crear:hover{
+  background-color: #163a52;
+}
+
+
+a.campo-tutorial{
+  text-decoration: none;
+  color: #1C5C86
+}
+
+a.campo-tutorial:hover{
+  color:#66abda
+}
+
+select, input{
+  padding: 10px;
+  border-radius: 5px;
+}
+
+h6{
+  font-size: 16px;
+  text-transform: capitalize;
+}
+
+label{
+  font-weight: bold;
 }
